// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Color/ColorPicker interactive 1`] = `
<div>
  <div>
    <div
      className="canvasColorPalette"
    >
      <div
        className="item-grid-row"
      >
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#fff",
                }
              }
            />
          </div>
        </button>
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#666",
                }
              }
            />
          </div>
        </button>
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#000",
                }
              }
            />
          </div>
        </button>
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#abc",
                }
              }
            />
          </div>
        </button>
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#def",
                }
              }
            />
          </div>
        </button>
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#abcdef",
                }
              }
            />
          </div>
        </button>
      </div>
    </div>
    <div
      className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        className="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={Object {}}
          />
        </div>
      </div>
      <div
        className="euiFlexItem"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <input
              className="euiFieldText"
              onChange={[Function]}
              placeholder="Color code"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <button
          aria-label="Add Color"
          className="euiButtonIcon euiButtonIcon--primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
            focusable="false"
            height={16}
            role="img"
            style={null}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <button
          aria-label="Remove Color"
          className="euiButtonIcon euiButtonIcon--primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
            focusable="false"
            height={16}
            role="img"
            style={null}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <label>
      <input
        aria-checked={true}
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
        
      <span>
        Show Buttons?
      </span>
    </label>
  </p>
</div>
`;

exports[`Storyshots components/Color/ColorPicker six colors 1`] = `
<div>
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          >
            <svg
              aria-hidden={true}
              className="euiIcon euiIcon--medium euiIcon-isLoading selected-color"
              focusable="false"
              height={16}
              role="img"
              style={
                Object {
                  "fill": "#333",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abc",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#def",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abcdef",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="Color code"
            type="text"
            value="#fff"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Color/ColorPicker six colors, value missing 1`] = `
<div>
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abc",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#def",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abcdef",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#a1b2c3",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="Color code"
            type="text"
            value="#a1b2c3"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Color/ColorPicker three colors 1`] = `
<div>
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          >
            <svg
              aria-hidden={true}
              className="euiIcon euiIcon--medium euiIcon-isLoading selected-color"
              focusable="false"
              height={16}
              role="img"
              style={
                Object {
                  "fill": "#333",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="Color code"
            type="text"
            value="#fff"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>
</div>
`;
